[add] modal formulario para agregar primera version terminada

--- a/src/components/styles/globales.scss
+++ b/src/components/styles/globales.scss
@@ -1,5 +1,6 @@
 $Fuente1: 'Nunito', sans-serif;
 $color-primario: #29A19C;
+$color-primario-disabled:#29a19c75;
 $color-secundario: #F9F9F9;
 $color-secundario-tranparenci:#f9f9f9ad;
 $color-variante:rgba(249, 249, 249, 0.2);
