--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,8 @@
 @import "./components/styles/TodoList";
 @import "./components/styles/TodoSearch";
 @import "./components/styles/TodoItem.scss";
+@import "./components/styles/Modal";
+@import "./components/styles/TodoForm";
 
 body,
 html {
