--- a/src/components/styles/_CreateTodoButton.scss
+++ b/src/components/styles/_CreateTodoButton.scss
@@ -13,6 +13,7 @@
     font-weight: 600;
     box-shadow: 3px 3px 9px 0px #228681, -2px -1px 10px #30bcb7;
     transition: .3s ease;
+    z-index: 1;
     &:hover{
         transform: rotate(224deg);
     }
