patrones de render y composicion

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
 @import "./components/styles/TodoItem.scss";
 @import "./components/styles/Modal";
 @import "./components/styles/TodoForm";
+@import "./components/styles/ChangeAlert";
 
 body,
 html {
