[add] estilos a emptyTodo

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 @import "./components/styles/Modal";
 @import "./components/styles/TodoForm";
 @import "./components/styles/ChangeAlert";
+@import "./components/styles/EmptyTodos";
 
 body,
 html {
