--- a/src/components/styles/_TodoList.scss
+++ b/src/components/styles/_TodoList.scss
@@ -2,6 +2,7 @@
     background-color: $bg-component;
     border-radius: 10px;
     margin: 0;
+    padding: 16px 0 4px;
     box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
 
     ul{
